# javascript-contracts

./: .gitignore  JsContracts.cabal  LICENSE  README  Setup.lhs
data/: contracts.js
scripts/: ghci  jscc  test
src/: Jscc.hs
src/BrownPLT/JavaScript/: Contracts.hs
src/BrownPLT/JavaScript/Contracts/: Compiler.hs  Interface.hs  Parser.hs  Template.hs  Types.hs
src/JsContracts/: Compiler.hs  Parser.hs  Template.hs  Types.hs
src/Language/JavaScript/: Contracts.hs
src/Language/JavaScript/Contracts/: Interface.hs
src/Test/: Execution.hs  Parser.hs  basic.js  basic.jsi  moduleFunctions.contracts.js  moduleFunctions.js  moduleFunctions.jsi  testCalls.js
tests/: Execution.hs  Parser.hs  basic.js  basic.jsi  moduleFunctions.js  moduleFunctions.jsi  testCalls.js
