Name:           JsContracts
Version:        0.1
Cabal-Version:	>= 1.2
Copyright:      Copyright (c) 2008 Arjun Guha
License:        LGPL
License-file:   LICENSE
Author:         Arjun Guha
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/research/plt/
Stability:      provisional
Category:       Language
Build-Type:     Custom
Synopsis:       Design-by-contract for JavaScript
Data-Dir:       data
Data-Files:
  contracts.js
Description:
 
Library
  Hs-Source-Dirs:
    src
  Build-Depends:
    base>=4, mtl>=1.1.0.1, parsec<3.0.0, pretty>=0.1, containers>=0.1, syb>=0.1,
    WebBits>=0.10.0, filepath, directory
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
  Exposed-Modules:
    JsContracts.Parser
    JsContracts.Types
    JsContracts.Compiler
    JsContracts.Template
  Other-Modules:
    Paths_JsContracts 

Executable jscc
  Main-Is: Jscc.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base>=4, mtl>=1.1.0.1, parsec<3.0.0, pretty>=0.1, containers>=0.1, syb>=0.1,
    WebBits>=0.10.0
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
